<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sideblue"
        tools:context=".view.Login">
    <com.schmersaldemo.mango.view.LanguageSpinner
            android:id="@+id/langspinner"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_width="120dp"
            android:layout_alignParentRight="true"/>

    <RelativeLayout android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:padding="20dp"
      android:background="@drawable/roundedcorner"
    >
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/loginicon"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/logo"
               android:src="@drawable/tecnicum"
    />

        <RelativeLayout android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loginicon"
                        android:layout_centerInParent="true"
        >

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/loginusername"
            android:hint="@string/loginusername"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
    />
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/loginpassword"
                android:layout_height="wrap_content"
                android:hint="@string/loginpwd"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:layout_below="@id/loginusername"
        />
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_below="@id/loginpassword"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:text="@string/loginbtn"
                    android:background="@drawable/roundedcorner"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>